fixed background issue on mobile

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -5,10 +5,15 @@
   text-align: center;
 }
 
+html {
+  min-height: 100%;
+  height: 100%;
+}
+
 body {
   --main-color: Silver;
-  background-image: url("assets/backgrounds/bkg2.png");
-  background-repeat: repeat;
+  /* background-image: url("assets/backgrounds/bkg2.png"); */
+  /* background-repeat: repeat; */
   /* background-color: black; */
   color: var(--main-color);
 }
