--- a/react/src/index.css
+++ b/react/src/index.css
@@ -5,7 +5,9 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #000000;
+  background-image: url("assets/backgrounds/bkg2.png");
+  background-repeat: repeat;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
